package comportement.observer.eni;

public interface Observateur {
    void actualise();

    void redessine();
}
